# autozenith

./: README.md  config.yaml  pyproject.toml
scripts/: setup.bat  setup.sh  wipe.bat  wipe.sh
src/assets/: cloud-init.yaml  createconfig.py  install.sh  pyproject.toml  tmux.sh
src/autozenith/: __main__.py  autozenith.py  config.py  droplets.py  wipe.py
